--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 contourpy==1.2.0
-cvxopt==1.3.2
+cvxopt==1.2.6
 cycler==0.12.1
-fonttools==4.44.3
+fonttools==4.45.1
+importlib-resources==6.1.1
 joblib==1.3.2
 kiwisolver==1.4.5
 matplotlib==3.8.2
@@ -13,7 +14,8 @@ pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 scikit-learn==1.3.2
-scipy==1.11.3
+scipy==1.11.4
 six==1.16.0
 threadpoolctl==3.2.0
 tzdata==2023.3
+zipp==3.17.0
